# ntcip-2025

./: CMakeLists.txt  README.md  build.sh
src/snmp_handler/: CMakeLists.txt  snmp_subagent.c
src/snmp_handler/kgm_ortak/channel/: CMakeLists.txt  channel.c  channel.h  channel_data.c  channel_data.h
src/snmp_handler/kgm_ortak/channel/error_flags_table/: channelErrorFlagsTable.c  channelErrorFlagsTable.h  channelErrorFlagsTable_data_access.c  channelErrorFlagsTable_data_access.h  channelErrorFlagsTable_data_get.c  channelErrorFlagsTable_data_get.h  channelErrorFlagsTable_data_set.c  channelErrorFlagsTable_data_set.h  channelErrorFlagsTable_enums.h  channelErrorFlagsTable_interface.c  channelErrorFlagsTable_interface.h  channelErrorFlagsTable_oids.h
src/snmp_handler/kgm_ortak/channel/general_fault_state_table/: ChannelGeneralFaultStateTable.c  ChannelGeneralFaultStateTable.h  ChannelGeneralFaultStateTable_data_access.c  ChannelGeneralFaultStateTable_data_access.h  ChannelGeneralFaultStateTable_data_get.c  ChannelGeneralFaultStateTable_data_get.h  ChannelGeneralFaultStateTable_data_set.c  ChannelGeneralFaultStateTable_data_set.h  ChannelGeneralFaultStateTable_enums.h  ChannelGeneralFaultStateTable_interface.c  ChannelGeneralFaultStateTable_interface.h  ChannelGeneralFaultStateTable_oids.h
src/snmp_handler/kgm_ortak/channel/traffic_light_fault_status_table/: trafficLightFaultStatusTable.c  trafficLightFaultStatusTable.h  trafficLightFaultStatusTable_data_access.c  trafficLightFaultStatusTable_data_access.h  trafficLightFaultStatusTable_data_get.c  trafficLightFaultStatusTable_data_get.h  trafficLightFaultStatusTable_data_set.c  trafficLightFaultStatusTable_data_set.h  trafficLightFaultStatusTable_enums.h  trafficLightFaultStatusTable_interface.c  trafficLightFaultStatusTable_interface.h  trafficLightFaultStatusTable_oids.h
src/snmp_handler/kgm_ortak/coord/: CMakeLists.txt  coord.c  coord.h  coord_data.c  coord_data.h
src/snmp_handler/kgm_ortak/coord/tr_pattern_table/: trPatternTable.c  trPatternTable.h  trPatternTable_data_access.c  trPatternTable_data_access.h  trPatternTable_data_get.c  trPatternTable_data_get.h  trPatternTable_data_set.c  trPatternTable_data_set.h  trPatternTable_enums.h  trPatternTable_interface.c  trPatternTable_interface.h  trPatternTable_oids.h
src/snmp_handler/kgm_ortak/detector/: CMakeLists.txt  kgmdedectormodulestatus.c  kgmdedectormodulestatus.h
src/snmp_handler/kgm_ortak/driver_module/: CMakeLists.txt  driverModule.c  driverModule.h
src/snmp_handler/kgm_ortak/net-snmp/agent/: mib_module_includes.h
src/snmp_handler/kgm_ortak/signal_state/: CMakeLists.txt  signalState.c  signalState.h  signal_state_data.c  signal_state_data.h
src/snmp_handler/kgm_ortak/signal_state/signal_state_table/: signalStateTable.c  signalStateTable.h  signalStateTable_data_access.c  signalStateTable_data_access.h  signalStateTable_data_get.c  signalStateTable_data_get.h  signalStateTable_data_set.c  signalStateTable_data_set.h  signalStateTable_enums.h  signalStateTable_interface.c  signalStateTable_interface.h  signalStateTable_oids.h
src/snmp_handler/kgm_ortak/user/: CMakeLists.txt  user.c  user.h  user_data.c  user_data.h  user_utils.c  user_utils.h
src/snmp_handler/kgm_ortak/user/user_operation_table/: userOperationsTable.c  userOperationsTable.h  userOperationsTable_data_access.c  userOperationsTable_data_access.h  userOperationsTable_data_get.c  userOperationsTable_data_get.h  userOperationsTable_data_set.c  userOperationsTable_data_set.h  userOperationsTable_enums.h  userOperationsTable_interface.c  userOperationsTable_interface.h  userOperationsTable_oids.h
src/snmp_handler/ntcip_1201/global_configuration/: CMakeLists.txt  globalConfiguration.c  globalConfiguration.h  global_config_data.c  global_config_data.h
src/snmp_handler/ntcip_1201/global_configuration/global_module_table/: globalModuleTable.c  globalModuleTable.h  globalModuleTable_data_access.c  globalModuleTable_data_access.h  globalModuleTable_data_get.c  globalModuleTable_data_get.h  globalModuleTable_data_set.c  globalModuleTable_data_set.h  globalModuleTable_enums.h  globalModuleTable_interface.c  globalModuleTable_interface.h  globalModuleTable_oids.h
src/snmp_handler/ntcip_1201/global_time_management/: CMakeLists.txt  globalTimeManagement.c  globalTimeManagement.h  global_time_data.c  global_time_data.h
src/snmp_handler/ntcip_1202/cabinet_env/: CMakeLists.txt  cabinetEnvironment.c  cabinetEnvironment.h  cabinet_1202_data.c  cabinet_1202_data.h
src/snmp_handler/ntcip_1202/cabinet_env/cabinet_env_device_table/: cabinetEnvironDevicesTable.c  cabinetEnvironDevicesTable.h  cabinetEnvironDevicesTable_data_access.c  cabinetEnvironDevicesTable_data_access.h  cabinetEnvironDevicesTable_data_get.c  cabinetEnvironDevicesTable_data_get.h  cabinetEnvironDevicesTable_data_set.c  cabinetEnvironDevicesTable_data_set.h  cabinetEnvironDevicesTable_enums.h  cabinetEnvironDevicesTable_interface.c  cabinetEnvironDevicesTable_interface.h  cabinetEnvironDevicesTable_oids.h
src/snmp_handler/ntcip_1202/channel/: CMakeLists.txt  channel.c  channel.h  channel_data_1202.c  channel_data_1202.h
src/snmp_handler/ntcip_1202/channel/channel_status_group_table/: channelStatusGroupTable.c  (+11 more)
src/snmp_handler/ntcip_1202/detector_parameters/: CMakeLists.txt  detector.c  detector.h  detector_parameters_data.c  detector_parameters_data.h
src/snmp_handler/ntcip_1202/phase_parameter/: CMakeLists.txt  phase.c  phase.h  phase_parameter.c  phase_parameter.h
src/snmp_handler/ntcip_1202/unit_parameter/: CMakeLists.txt  unit.c  unit.h  unit_parameters_data.c  unit_parameters_data.h
src/snmp_handler/ntcip_1202/volume_occupancy_report/: CMakeLists.txt  volumeOccupancyReport.c  volumeOccupancyReport.h  volume_occupancy_data.c  volume_occupancy_data.h
src/snmp_handler/snmp_trap/: CMakeLists.txt  myNotifications.c  myNotifications.h
src/snmp_handler/utils/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  circular_buffer_api.c  circular_buffer_api.h  def_cpu_api.c  defs_cpu.h  log.c  log.h  utils.c  utils.h
(+119 files in other folders)
